# SwarmWatch

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package.bat  package.cmd  publish.cmd  setup.cfg  setup.py
SwarmWatch/: __init__.py  __version__.py  main.py  state.py
SwarmWatch/static/css/: swarm.css
SwarmWatch/static/js/: get_swarm_state.js
SwarmWatch/templates/: swarm.html
