# Copyright (C) 2021 https://github.com/binaryhabitat.
#
# This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.

[metadata]
name = SwarmWatch
version = attr: SwarmWatch.__version__.__version__
description = SwarmWatch is a project for monitoring a Docker setup running in swarm mode.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/binaryhabitat/SwarmWatch
author = binaryhabitat
license = MPL-2.0
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

# Third Party Tools
[isort]
combine_as_imports = false
line_length = 120
multi_line_output = 1
remove_redundant_aliases = true
reverse_relative = true

[mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = skip
ignore_missing_imports = true
incremental = false
no_implicit_optional = true
warn_no_return = true
warn_unreachable = true
warn_unused_ignores = true

[pyquotes]
double-quotes = true
